@@ -23,5 +23,5 @@
 # which are made available via <tt>FFI</tt> bindings to <tt>mecab</tt>.
 module Natto
   # Version string for this Rubygem.
-  VERSION = "0.9.0"
+  VERSION = "0.9.1"
 end
